--- a/index.html
+++ b/index.html
@@ -2,50 +2,89 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Control Motor Paso a Paso</title>
+  <title>Comedor Automático de Gallinas</title>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
   <style>
+    /* ===== Estilos generales ===== */
     body {
       font-family: 'Segoe UI', sans-serif;
-      text-align: center;
+      /*background: linear-gradient(135deg, #FFEB3B, #FFC107);*/
       background: linear-gradient(120deg, #0072ff, #00c6ff);
-      color: white;
       margin: 0;
-      height: 100vh;
       display: flex;
-      flex-direction: column;
       justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
-    h1 { margin-bottom: 10px; }
+
+    .card {
+      background: rgba(255,255,255,0.9);
+      border-radius: 20px;
+      padding: 40px;
+      max-width: 400px;
+      width: 90%;
+      text-align: center;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      animation: fadeIn 1s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    h1 {
+      margin-bottom: 20px;
+      color: #6B4C00;
+    }
+
     button {
-      font-size: 20px;
-      padding: 15px 40px;
+      font-size: 22px;
+      padding: 20px 50px;
       border: none;
-      border-radius: 30px;
+      border-radius: 40px;
       cursor: pointer;
-      background: #fff;
-      color: #0072ff;
+      background: #4CAF50;
+      color: white;
       font-weight: bold;
       transition: 0.3s;
-    }
-    button:hover {
-      transform: scale(1.05);
-      background: #f1f1f1;
-    }
-    #estado {
-      font-size: 22px;
       margin-top: 20px;
+    }
+
+    button:hover {
+      transform: scale(1.1);
+      background: #45A049;
+    }
+
+    #estado {
+      font-size: 20px;
+      margin-top: 20px;
+      padding: 10px;
+      border-radius: 15px;
+      background: #FFF3E0;
+      color: #BF360C;
+      font-weight: bold;
+    }
+
+    #contador {
+      margin-top: 15px;
+      font-size: 20px;
+      color: #3E2723;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>Control del Motor Paso a Paso</h1>
-  <button id="btnEncender">Encender Motor</button>
-  <div id="estado">Estado actual: <b>Desconocido</b></div>
+  <div class="card">
+    <h1>Comedor Automático para Gallinas 🐔</h1>
+    <button id="btnEncender">Encender Motor</button>
+    <div id="estado">Estado actual: <b>Desconocido</b></div>
+    <div id="contador"></div>
+  </div>
 
   <script>
-    // === CONFIGURA TU FIREBASE ===
+    // === Configuración Firebase ===
     const firebaseConfig = {
       apiKey: "AIzaSyDvdJ-Sob2ZoQrQD8PIG0WE8i8Q9pBa89Y",
       authDomain: "mortorpaso.firebaseapp.com",
@@ -55,36 +94,50 @@
       messagingSenderId: "520882205185",
       appId: "1:520882205185:web:1b87fe3ef08c92f595c600"
     };
-
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
     const refMotor = db.ref("/MotorPasoFireBase/estado");
 
     const boton = document.getElementById("btnEncender");
     const estado = document.getElementById("estado");
+    const contador = document.getElementById("contador");
 
-    // === Cambiar estado desde el botón ===
+    let tiempoMotor = 10; // 10 segundos de funcionamiento
+
+    // ===== Cambiar estado desde el botón =====
     boton.addEventListener("click", () => {
-      refMotor.once("value").then(snapshot => {
-        const valor = snapshot.val();
-        const nuevoEstado = valor === 1 ? 0 : 1;
-        refMotor.set(nuevoEstado);
-      });
+      refMotor.set("1"); // Solo encender, se apagará automáticamente
     });
 
-    // === Escuchar cambios en tiempo real ===
+    // ===== Escuchar cambios en Firebase en tiempo real =====
     refMotor.on("value", (snapshot) => {
       const valor = snapshot.val();
-      if (valor === 1) {
-        boton.innerText = "Apagar Motor";
-        boton.style.background = "#ff4b5c";
-        boton.style.color = "#fff";
+      if (valor === "1") {
         estado.innerHTML = "Estado actual: <b>Encendido</b>";
+        boton.style.background = "#FF5722";
+        boton.style.color = "#fff";
+        boton.innerText = "Motor Encendido";
+
+        // Iniciar cuenta regresiva
+        let tiempoRestante = tiempoMotor;
+        contador.innerText = `Apagando en ${tiempoRestante}s`;
+
+        const intervalo = setInterval(() => {
+          tiempoRestante--;
+          if (tiempoRestante >= 0) {
+            contador.innerText = `Apagando en ${tiempoRestante}s`;
+          } else {
+            clearInterval(intervalo);
+            contador.innerText = "";
+          }
+        }, 1000);
+
       } else {
-        boton.innerText = "Encender Motor";
-        boton.style.background = "#fff";
-        boton.style.color = "#0072ff";
         estado.innerHTML = "Estado actual: <b>Apagado</b>";
+        boton.style.background = "#4CAF50";
+        boton.style.color = "#fff";
+        boton.innerText = "Encender Motor";
+        contador.innerText = "";
       }
     });
   </script>
